# inmobiliaria-nea

./: .gitignore  docker-compose.yml  explain_analyze_report.md
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  audit.sql  audit_results.txt  test_e2e.mjs  test_upload_url.rs  tree.txt  tree2.txt  tree3.txt
backend/.sqlx/: query-0b87b122d6b009180529592680fdc036d2ca1387d9404566c5a69dd87b30275b.json  query-10a82e48dbf213a5046b086dbe219a5bf0995519fba676c6cbb7087c68250ada.json  query-14dfdf681f4a16256f703d9e7081078a663a7b8917226289a5c439c89881d18e.json  query-1573e33272d10b2ca71f18d7977128b343195d252a997b17f4ac09e9f6c94844.json  query-1b451ad45c91f388acf8ccc709d87fef6bffb0de2f6ebd17de727c6f8247c99e.json  query-216e67c7918cac89c1482db32b8eef4c1ac15a78462e4dc8c871f6e9445c5e89.json  query-2492522475587df6b3e119485b9ce7b97bfb384bbef5189495c46fdb057ea8c6.json  query-2754f9bcb7736cda50670d1498be563114b003c488f45369b46ae472861b90c2.json  query-28d4dc8cd042976fb222d115cb117699c332e034bbe924ec815d176e37e80545.json  query-315413e5ac1514222c05132e7e146444a08a5c0719390f3ab81d05e01829038c.json  query-32ea009da95a0629eef1c2d3bcf4e1a1fac98e871eb61f79287efd28762684e2.json  query-3892e807056576ae7a4601321fd284dfa866008198785a1a11f7814137973603.json  query-394a2d37daab29d312ae22920a251fece682852b14218258b74581c691cf749e.json  query-436baade96b42bb74fb804341ab15db09326fca4c60b0b30d1dbb7ebfded2f07.json  query-442302d111ae94fa4e7b454a19446d0a0541cee4e97b7ecc766c0d6e1c6fdde0.json  query-4954fe593a048fb1a29c60304309138f85e277f4217582f7954ec3ef7a7ebdb8.json  query-4a1e36e833eb6a828a49d4d339db81ce6fc6c35fb24910a16c10b9b81fcd009b.json  query-4d67d980b208989b5733062596829c19077ce53753d7c922c9f957474cd29d33.json  query-5299cf5d173ee1908b424f3b3256863d5232025a2a0bd721072ce54bb99bd3db.json  query-5907225e28f7875ec00ae3c9ba3a170535adc2a64ddec910bd17d6b022fc308d.json  query-5c3deef65157da68c99b81a36045a3107061acc187bb33d624cf057947b445ea.json  query-5fcc7699b3ebbeb221e1dce64f070e48a69eddc612764be8c73f4fbb6a5f1bc5.json  query-60517e537769ffeb46d8ac75854433f29f4d54e3851d1846b7b72a1d5670311e.json  query-61274031fa85acbb258a14aa14e7a207d6c6de0f97ca16537df4e2f0c4f1c546.json  query-62e4092c3a533f7003e10923fb1e812461e2fe818f5d3cc503aad0804cc61737.json  query-68301d3bed110a805c1ba104b8fa8a6e83d2df6bb3194f63e31ebb108056c0a3.json  query-6ec5b9a3fd7af149147001f2191a2ab370fbc58a47991dd283e13c9bb924db91.json  query-6f53bb3f49f418c9e711b1f19e3fff2fbbf8f4bed6eb61d53bac6896b2679466.json  query-6ff24f7ca760dae862676347cd45be4de8fcfae3407a13cfbc61b0c44599cff6.json  query-714a904f4e0669e5c6dec905ffe2ff8768f43979b72c50a27694ce4612705c53.json  query-75c159bddf777c00719041d36af26b77c3ec1899c87764335832486ff4c29061.json  query-859675248e2176ab99056adb06bd75a3e5f79272918bf0106307395c6269925b.json  query-85e0be1d3793ced8cbe41da9123c1b466012e544e01053a9cdf5913981c3769e.json  query-8626478df8d02eafdb17f704646b27178e73a8e1c7885144e3aa6af37f669f1f.json  query-87c086fa0931fa0e3317d43a8136e1fd5e730af7918f7e3c399680f5f458d785.json  query-8ba3ce7c248d18853a91d799aaa17b336a51bcf373296ad2a939d076640f15a9.json  query-8caa2113690168d5ae86c40e72119b09db41ed4777a8b338b90b2e806ef7fb5c.json  query-8ce36cb799fe58d47d27f57f5cbe78cf7ac088a267bb7684007649786f08ccc6.json  (+34 more)
backend/migrations/: 20240101000000_initial_schema.sql  (+28 more)
test-runner/: Cargo.toml  auditoria_final_fase3.txt  check_indices.js  evidencia_fase3.txt  final_audit.js  index.js  package-lock.json  package.json  phase3.js  phase62b.js  run_explain.js  run_indices.js  run_migration.js
(+307 files in other folders)
