[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7.5", features = ["multipart", "macros"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }

# Database
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "rust_decimal"] }
rust_decimal = { version = "1.34", features = ["serde"] }

# Redis
redis = { version = "0.25.3", features = ["tokio-comp", "json"] }

# Serialization
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"

# Environment
dotenvy = "0.15.7"

# Observability / Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

# Types
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }

# Auth & Crypto
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"

# OpenAPI / Swagger
utoipa = { version = "4.2.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
reqwest = { version = "0.13.4", features = ["json"] }
csv = "1.3.0"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"
